Bug 288649 - Paragraph styles widget not showing the dafault style in new document
Summary: Paragraph styles widget not showing the dafault style in new document
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Chakra Linux
: NOR major
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2011-12-10 12:49 UTC by Giuseppe Calà
Modified: 2012-02-05 16:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
blank item selected (25.52 KB, image/png)
2011-12-10 12:51 UTC, Giuseppe Calà
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Giuseppe Calà 2011-12-10 12:49:57 UTC
Version:           2.4-snapshots (using KDE 4.7.3) 
OS:                Linux

When opening a new document the widget for paragraphs styles shows a blank item instead of "Standard" (see attached image)

Reproducible: Didn't try

Steps to Reproduce:
Open a new document

Actual Results:  
blank item in paragraphs styles widget

Expected Results:  
"Standard" should be default
Comment 1 Giuseppe Calà 2011-12-10 12:51:28 UTC
Created attachment 66588 [details]
blank item selected
Comment 2 Camilla Boemann 2011-12-10 12:54:37 UTC
It's a known bug, but not reported before so let's mark it as the release blocker it is
Comment 3 Gopalakrishna Bhat 2011-12-18 13:12:09 UTC
Git commit d8d99ce81ce5e717a312003f9b0aead2f380c0ae by Gopalakrishna Bhat A.
Committed on 18/12/2011 at 14:02.
Pushed by gopalakrishnabhat into branch 'master'.

Set the initial style for a newly created document. The template is changed to add a invisible character 0x200B after <?opendocument cursor-position?> to the document template. The reason is that
style is not applied for empty paragraphs. See https://bugs.kde.org/show_bug.cgi?id=264471#c7 for more explaination.

BUG: 288649

M  +-    --    words/templates/Wordprocessing/A4.odt
M  +-    --    words/templates/Wordprocessing/ProfessionalA4.odt
M  +-    --    words/templates/Wordprocessing/ProfessionalLetter.odt

http://commits.kde.org/calligra/d8d99ce81ce5e717a312003f9b0aead2f380c0ae
Comment 4 Camilla Boemann 2011-12-26 13:54:41 UTC
We shouldn't add empty chars to documents. The fix will have to involve the style widget looking at the par style instead. Let's wait for pierreSt branch to land
Comment 5 Camilla Boemann 2012-01-29 16:46:14 UTC
Git commit b6d453a38fddae56a84fb4c7ceb6d26cc84c6adc by C. Boemann.
Committed on 29/01/2012 at 17:41.
Pushed by boemann into branch 'master'.

Don't override paragraph setting just because there is no content

M  +0    -5    libs/kotext/opendocument/KoTextLoader.cpp
M  +1    -1    libs/textlayout/KoTextShapeData.cpp

http://commits.kde.org/calligra/b6d453a38fddae56a84fb4c7ceb6d26cc84c6adc
Comment 6 Giuseppe Calà 2012-02-05 16:46:14 UTC
In beta 7, the paragraph style widget shows a blank item for new documents.
Comment 7 Camilla Boemann 2012-02-05 16:49:11 UTC
yes it's solved after beta 7 was tagged
Comment 8 Giuseppe Calà 2012-02-05 16:55:48 UTC
Perfect, thanks