Don't override paragraph setting just because there is no content

BUG:288649